--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         const Experience = () => {
             const experienceItems = [
                 { title: "교실혁명 선도교사", period: "2024년 ~ 현재", category: "Role" },
-                { title: "전남대학교 AI융합교육학과 석사 (졸업 예정)", period: "2025. 2.", category: "Education" },
+                { title: "전남대학교 AI융합교육학과 석사 (졸업)", period: "2025. 2.", category: "Education" },
                 { title: "광주교육대학교 초등미술교육학과 (졸업)", period: "2020. 2.", category: "Education" },
                 { title: "잇다 활용 우수 교원 (부총리 겸 교육부장관 표창)", period: "2023년", category: "Award" },
                 { title: "E학습터 활용 우수 교원 (전라남도교육감 표창)", period: "2021년", category: "Award" },
